# job_parse

./: main.py  pyproject.toml
api/: abstract_api.py  headhunter_api.py  superjob_api.py
storage/: abstract_storage.py
vacancy/: vacancy.py
