[tool.poetry]
name = "job-parse"
version = "0.1.0"
description = ""
authors = ["Aleksandr Charushin <charushinas@gmail.com>"]
readme = "README.md"
packages = [{include = "job_parse"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
bs4 = "^0.0.1"
ujson = "^5.8.0"
httpx = "^0.24.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
